--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,6 +18,7 @@ input {
     border-radius: 5px; 
 }
 table {
+  width: 100%;
   border-style: solid;
   border-width: .5px;
   border-collapse: collapse;
