--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -58,12 +58,12 @@ h1, h2 {
 
 .sidenav {
   height: 100%;
-  width: 230px;
+  width: 220px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #d1e4f8;
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -71,18 +71,18 @@ h1, h2 {
 .sidenav a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 25px;
-  color: #818181;
+  font-size: 15px;
+  color: black;
   display: block;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #ad090f;
 }
 
 .main {
   margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
+  font-size: auto; 
   padding: 0px 10px;
 }
 
